1、漏洞问题第三方依赖升级及适配修改；2、去除hadoop相关业务